--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,6 +1,6 @@
 <header
-  class="site-header d-flex flex-column justify-content-center align-items-center"
->
+  class="site-header d-flex flex-column justify-content-center
+  align-items-center">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-12 text-center">
@@ -26,7 +26,7 @@
           type="text"
           [(ngModel)]="sizeFilter"
           (ngModelChange)="filter()"
-        />
+          />
       </div>
       <div class="col-lg-4 col-12">
         Filter by price:
@@ -37,7 +37,7 @@
           max="30"
           [(ngModel)]="priceFilter"
           (ngModelChange)="filter()"
-        />
+          />
         {{ priceFilter }}
       </div>
     </div>
@@ -51,10 +51,9 @@
       <div
         class="col-lg-6 col-12 mb-4 mb-lg-0"
         *ngFor="
-          let event of eventosFiltrado
-            | paginate : { itemsPerPage: ipp, currentPage: cp }
-        "
-      >
+        let event of eventosFiltrado
+        | paginate : { itemsPerPage: ipp, currentPage: cp }
+        ">
         <div class="custom-block d-flex m-2">
           <div class="">
             <div class="custom-block-icon-wrap">
@@ -64,13 +63,13 @@
                   src="/assets/images/podcast/11683425_4790593.jpg"
                   class="custom-block-image img-fluid"
                   alt=""
-                />
+                  />
               </a>
             </div>
 
             <div class="mt-2">
-              <a class="btn custom-btn"
-                ><i class="fa-solid fa-cart-shopping"></i> Buy
+              <a class="btn custom-btn"><i class="fa-solid fa-cart-shopping"></i>
+                Buy
               </a>
             </div>
           </div>
@@ -82,9 +81,7 @@
                 {{ event.date }}
               </small>
 
-              <small
-                >Code <span class="badge">{{ event.id + 1 }}</span></small
-              >
+              <small>Code <span class="badge">{{ event.id + 1 }}</span></small>
             </div>
 
             <div class="profile-block">
@@ -95,14 +92,13 @@
                 <strong class="text-capitalize">{{ event.type }}</strong>
               </p>
               <p class="text-capitalize mb-0">
-                <i class="fa-solid fa-location-dot me-1"></i
-                >{{ event.location }}
+                <i class="fa-solid fa-location-dot me-1"></i>{{ event.location
+                }}
               </p>
             </div>
 
             <div
-              class="custom-block-bottom d-flex justify-content-between mt-3"
-            >
+              class="custom-block-bottom d-flex justify-content-between mt-3">
               <a>
                 <span>Price: {{ event.price }} &euro;</span>
               </a>
@@ -110,10 +106,17 @@
           </div>
 
           <div class="d-flex flex-column ms-auto">
-            <a class="btn btn-dark" (click)="modifyEvent(event)"
-              ><i class="fa-solid fa-screwdriver-wrench"></i> Modify
+            <a class="btn btn-dark" (click)="modifyEvent(event)"><i
+                class="fa-solid fa-screwdriver-wrench"></i> Modify
             </a>
           </div>
+
+          <div class="d-flex flex-column ms-auto">
+            <a class="btn btn-dark" (click)="deleteEvent(event)"><i
+                class="fa-solid fa-screwdriver-wrench"></i> Delete
+            </a>
+          </div>
+
         </div>
       </div>
 
@@ -142,13 +145,11 @@
           </ul>
         </nav>
       </div> -->
-
       <div class="row">
         <div class="col-lg-5 col-12 mx-auto">
           <div class="mt-5">
             <pagination-controls
-              (pageChange)="cp = $event"
-            ></pagination-controls>
+              (pageChange)="cp= $event"></pagination-controls>
           </div>
         </div>
       </div>
@@ -161,8 +162,7 @@
         [date]="date"
         [location]="location"
         [price]="price"
-        (messageEvent)="getEvent($event)"
-      ></app-modify>
+        (messageEvent)="getEvent($event)"></app-modify>
     </div>
   </div>
 </section>
