--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 <header
-  class="site-header d-flex flex-column justify-content-center align-items-center"
->
+  class="site-header d-flex flex-column justify-content-center
+  align-items-center">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-12 text-center">
@@ -15,8 +15,7 @@
     <form
       class="row g-3 border rounded p-3"
       [formGroup]="registerForm"
-      (ngSubmit)="submit()"
-    >
+      (ngSubmit)="submit()">
       <div class="col-md-12">
         <h2 class="text-center display-6">
           <i class="fa-solid fa-user-plus"></i>
@@ -29,23 +28,23 @@
           class="form-control"
           id="username"
           formControlName="username"
-        />
+          />
         <div
-          *ngIf="this.registerForm.get('username')?.errors?.['required'] && this.registerForm.get('username')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('username')?.errors?.['required'] &&
+          this.registerForm.get('username')?.touched"
+          class="form-text text-danger">
           El nombre de usuario es obligatorio.
         </div>
         <div
-          *ngIf="this.registerForm.get('username')?.errors?.['minlength'] && this.registerForm.get('username')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('username')?.errors?.['minlength'] &&
+          this.registerForm.get('username')?.touched"
+          class="form-text text-danger">
           Minimo 6 caracteres.
         </div>
         <div
-          *ngIf="this.registerForm.get('username')?.errors?.['pattern'] && this.registerForm.get('username')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('username')?.errors?.['pattern'] &&
+          this.registerForm.get('username')?.touched"
+          class="form-text text-danger">
           Solo letras.
         </div>
       </div>
@@ -57,17 +56,17 @@
           class="form-control"
           id="email"
           formControlName="email"
-        />
+          />
         <div
-          *ngIf="this.registerForm.get('email')?.errors?.['required'] && this.registerForm.get('email')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('email')?.errors?.['required'] &&
+          this.registerForm.get('email')?.touched"
+          class="form-text text-danger">
           El email es obligatorio.
         </div>
         <div
-          *ngIf="this.registerForm.get('email')?.errors?.['pattern'] && this.registerForm.get('email')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('email')?.errors?.['pattern'] &&
+          this.registerForm.get('email')?.touched"
+          class="form-text text-danger">
           El email no tiene el formato correcto
         </div>
       </div>
@@ -79,31 +78,29 @@
           class="form-control"
           id="password"
           formControlName="password"
-        />
+          />
         <div
-          *ngIf="this.registerForm.get('password')?.errors?.['required'] && this.registerForm.get('password')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('password')?.errors?.['required'] &&
+          this.registerForm.get('password')?.touched"
+          class="form-text text-danger">
           La contraseña es obligatoria.
         </div>
         <div
-          *ngIf="this.registerForm.get('password')?.errors?.['minlength'] && this.registerForm.get('password')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('password')?.errors?.['minlength'] &&
+          this.registerForm.get('password')?.touched"
+          class="form-text text-danger">
           Minimo 8 caracteres.
         </div>
         <div
-          *ngIf="this.registerForm.get('password')?.errors?.['pattern'] && this.registerForm.get('password')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('password')?.errors?.['pattern'] &&
+          this.registerForm.get('password')?.touched"
+          class="form-text text-danger">
           La contraseña tiene que contener solo letras o numeros
         </div>
       </div>
 
       <div class="col-md-6">
-        <label for="retry-password" class="form-label"
-          >Repite contraseña:</label
-        >
+        <label for="retry-password" class="form-label">Repite contraseña:</label>
         <input
           type="password"
           class="form-control"
@@ -111,17 +108,17 @@
           formControlName="retryPassword"
           appCheckPass
           [parametro]="this.registerForm.value.password"
-        />
+          />
         <div
-          *ngIf="this.registerForm.get('retryPassword')?.errors?.['required'] && this.registerForm.get('retryPassword')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('retryPassword')?.errors?.['required'] &&
+          this.registerForm.get('retryPassword')?.touched"
+          class="form-text text-danger">
           La contraseña es obligatoria.
         </div>
         <div
-          *ngIf="this.registerForm.get('retryPassword')?.errors?.['checkPass'] && this.registerForm.get('retryPassword')?.touched"
-          class="form-text text-danger"
-        >
+          *ngIf="this.registerForm.get('retryPassword')?.errors?.['checkPass']
+          && this.registerForm.get('retryPassword')?.touched"
+          class="form-text text-danger">
           Contraseñas deben coincidir
         </div>
       </div>
@@ -132,44 +129,32 @@
           id="maritalStatus"
           class="form-select"
           formControlName="maritalStatus"
-          (change)="changeStatus($event)"
-          appCheckMaritalStatus
-        >
+          appCheckMaritalStatus>
           <option *ngFor="let status of maritalStatusOptions">
             {{ status }}
           </option>
         </select>
       </div>
       <div
-        *ngIf="this.registerForm.get('maritalStatus')?.errors?.['checkMaritalStatus'] && this.registerForm.get('maritalStatus')?.touched"
-        class="form-text text-danger"
-      >
+        *ngIf="this.registerForm.get('maritalStatus')?.errors?.['checkMaritalStatus']
+        && this.registerForm.get('maritalStatus')?.touched"
+        class="form-text text-danger">
         Debe seleccionar un valor válido
       </div>
 
       <div class="offset-md-1 col-md-3">
         <p>Genero:</p>
-        <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="radio"
-            name="inlineRadioOptions"
-            id="man"
-            value="man"
-          />
-          <!--(change)="changeGender($event)"-->
-          <label class="form-check-label" for="inlineRadio1">Hombre</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="radio"
-            name="inlineRadioOptions"
-            id="woman"
-            value="woman"
-          />
-          <!--(change)="changeGender($event)"-->
-          <label class="form-check-label" for="inlineRadio2">Mujer</label>
+        <div class="form-check-inline" *ngFor="let gender of genderList">
+          <label class="form-check-label">
+            <input
+              class="form-check-input"
+              type="radio"
+              value="{{ gender }}"
+              id="{{ gender }}"
+              formControlName="gender"
+              />
+            {{ gender }}
+          </label>
         </div>
       </div>
 
@@ -183,7 +168,7 @@
               value="{{ interest }}"
               id="flexCheckDefault"
               (change)="onCheckChange($event)"
-            />
+              />
             {{ interest }}
           </label>
         </div>
@@ -205,7 +190,7 @@
             type="checkbox"
             formControlName="acceptConditions"
             id="acceptConditions"
-          />
+            />
           <label class="form-check-label" for="acceptConditions">
             Aceptar terminos y condiciones.
           </label>
@@ -225,8 +210,7 @@
           type="submit"
           class="btn btn-success"
           type="submit"
-          [disabled]="registerForm.invalid"
-        >
+          [disabled]="registerForm.invalid">
           Registrarse
         </button>
       </div>
