--- a/src/app/components/modify/modify.component.html
+++ b/src/app/components/modify/modify.component.html
@@ -12,8 +12,17 @@
         aria-describedby="usernameHelp"
         placeholder="Name"
         [(ngModel)]="name"
-      />
+        maxlength="50"
+        required
+        #nameControl="ngModel"
+        />
     </div>
+    <div *ngIf="nameControl.errors?.['required']&& nameControl.touched"
+      class="text-danger">Campo
+      obigatorio</div>
+    <div *ngIf="nameControl.errors?.['minlength']&& nameControl.touched"
+      class="text-danger">Maximo
+      50 caracteres </div>
     <div class="form-group p-3">
       <label for="password">Type</label>
       <input
@@ -23,46 +32,59 @@
         id="type"
         placeholder="type"
         [(ngModel)]="type"
-      />
+        required
+        #TypeControl="ngModel"
+        />
+    </div>
+    <div *ngIf="TypeControl.errors?.['required']&& TypeControl.touched"
+      class="text-danger">Campo
+      obigatorio</div>
+    <div class="form-group p-3">
+      <label for="password">Date</label>
+      <input
+        type="date"
+        name="date"
+        class="form-control"
+        id="date"
+        placeholder="date"
+        [(ngModel)]="date"
+        />
     </div>
     <div class="form-group p-3">
-        <label for="password">Date</label>
-        <input
-          type="date"
-          name="date"
-          class="form-control"
-          id="date"
-          placeholder="date"
-          [(ngModel)]="date"
+      <label for="password">Location</label>
+      <input
+        type="text"
+        name="location"
+        class="form-control"
+        id="location"
+        placeholder="location"
+        [(ngModel)]="location"
+        required
+        #locationControl="ngModel"
         />
-      </div>
-      <div class="form-group p-3">
-        <label for="password">Location</label>
-        <input
-          type="text"
-          name="location"
-          class="form-control"
-          id="location"
-          placeholder="location"
-          [(ngModel)]="location"
+    </div>
+    <div *ngIf="locationControl.errors?.['required']&& locationControl.touched"
+      class="text-danger">Campo
+      obigatorio</div>
+    <div class="form-group p-3">
+      <label for="password">Price</label>
+      <input
+        type="number"
+        name="price"
+        class="form-control"
+        id="price"
+        placeholder="price"
+        [(ngModel)]="price"
+        required
+        #priceControl="ngModel"
         />
-      </div>
-      <div class="form-group p-3">
-        <label for="password">Price</label>
-        <input
-          type="text"
-          name="price"
-          class="form-control"
-          id="price"
-          placeholder="price"
-          [(ngModel)]="price"
-        />
-      </div>
-    <button (click)="sendMessage()" class="btn btn-primary d-block m-auto mt-3">
+    </div>
+    <div *ngIf="priceControl.errors?.['required']&& priceControl.touched"
+      class="text-danger">Campo
+      obigatorio</div>
+    <button (click)="sendMessage()" [disabled]="formModify.invalid" class="btn
+      btn-primary d-block m-auto mt-3">
       Modify
     </button>
   </form>
 </div>
-
-
-
